# ProjectTrackr

./: .replit.mysql  CHANGELOG.md  DEPLOYMENT.md  MAINTENANCE.md  MAINTENANCE_AI.md  MYSQL_MIGRATION.md  Procfile  README.md  RENDER_DEPLOY.md  TODO.md  add_account_lockout_columns.py.bak  add_admin_tables.py  add_burn_after_read_column.py  add_paste_encryption_columns.py.bak  add_paste_fork_columns.py  add_paste_revisions_table.py  add_subscription_fields.py.bak  add_tags_table.py.bak  add_user_ban_columns.py.bak  app.py  app.py.bak  convert_to_mysql.py  cookies.txt  create_app.py  create_mysql_migration_zip.py  db.py  dependencies.py  dependencies_for_local_testing.txt  deploy_wsgi.py  diagnose_psycopg2.py  export_release.py  fix_all_issues.py  fix_print_view.py  forms.py  init_db.py  main.py  main_mysql.py  main_render.py  minimal_requirements.txt  minimal_wsgi.py  (+34 more)
attached_assets/: .gitignore  .htaccess  .travis.yml  CHANGELOG.md  LICENSE  Pasted--Build-successful-Deploying-Running-gunicorn-bind-0-0-0-0-PORT-wsgi-app-Tra-1744429558548.txt  Pasted--Exited-with-status-1-Common-ways-to-troubleshoot-your-deploy-https-render-com-docs-troub-1744433383193.txt  Pasted--Exited-with-status-1-Common-ways-to-troubleshoot-your-deploy-https-render-com-docs-troub-1744501093417.txt  Pasted--File-opt-render-proj-1744491740592.txt  Pasted--Free-Plan-Includes-Create-store-pastes-Public-unlisted-and-private-visibil-1744337433998.txt  Pasted--Running-gunicorn-bind-0-0-0-0-PORT-main-app-DEBUG-sentry-sdk-errors-Tracing-Create-new-p-1744426100534.txt  README.md  archive.php  composer.json  (+23 more)
(+166 files in other folders)
