[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "pygments>=2.19.1",
    "bleach>=6.2.0",
    "python-dotenv>=1.1.0",
    "sendgrid>=6.11.0",
    "openai>=1.72.0",
    "oauthlib>=3.2.2",
    "twilio>=9.5.2",
    "flask-limiter>=3.12",
    "trafilatura>=2.0.0",
    "sentry-sdk[flask]>=2.25.1",
    "cryptography>=44.0.2",
    "pymysql>=1.1.1",
]
